# pulseaudio-modules-droid-hidl

./: configure.ac
debian/: changelog  control  pulseaudio-modules-droid-hidl-28.install  rules
src/hidl/: Makefile.am  droid-util.h.in  module-droid-hidl-28-symdef.h  module-droid-hidl-28.c  module-droid-hidl.c  module-symdef-compat.h
